<resources>
    <string name="app_name">Class Look Up</string>

    <string name="textHome">Home</string>
    <string name="textSettings">Settings</string>
    <string name="textSchedules">Schedules</string>

    <string name="textDownload">Download</string>
    <string name="textDownloaded">Downloaded</string>
    <string name="textCancel">Cancel</string>
    <string name="textSearch">Search</string>

    <string name="textFindClass">Find a Class</string>
    <string name="textTerm">Term</string>
    <string name="textBuildingName">Building Name</string>
    <string name="textRoomName">Room Name</string>
    <string name="textSearchInvalid">Please put in valid information</string>
    <string name="textSearchNoResults">No results found</string>

    <string name="textLoadingSchedule">Loading Schedule</string>

    <string name="textScheduleInstruction">Select a semester to download</string>
    <string name="textFetching">Fetching</string>

    <string name="coursesApiRoot">https://courses.illinois.edu/cisapp/explorer/schedule.xml</string>

    <string name="textCannotDeleteFile">Cannot delete file</string>
</resources>
